fix header wrap; remove sticky header for mobile

--- a/responsive-web-design/survey-page/survey.css
+++ b/responsive-web-design/survey-page/survey.css
@@ -113,3 +113,18 @@ footer {
     margin-left: auto;
     margin-right: auto;
 }
+.smartbreak {
+    display: hide;
+}
+@media (max-width: 1000px)
+{
+    .spacer {
+        padding-left: 200px;
+    }
+}
+@media (max-height: 800px)
+{
+    header {
+        position: relative;
+    }
+}
